--- a/assets/css/index/partials/section-destaques.css
+++ b/assets/css/index/partials/section-destaques.css
@@ -39,3 +39,56 @@ section.destaques {
     padding: 1.38rem 5.94rem;
     border-radius: 1.25rem;
 }
+
+@media screen and (max-width: 767px) {
+    section.destaques {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 0.94rem;
+        width: 21.4375rem;
+        height: 19.4375rem;
+        
+    }
+    .container-destaques {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 767px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    
+    .destaque-um h3,
+    .destaque-dois h3,
+    .destaque-tres h3 {
+        font-size: 1.125rem;
+        margin-bottom: 0.62rem;
+    }
+    
+    .destaque-um p,
+    .destaque-dois p,
+    .destaque-tres p {
+        font-size: 1rem;
+    }
+    
+    .destaque-um {
+        padding: 1.25rem 2.5rem;
+        border-right: 0;
+        border-bottom: 1px solid #B2B0B0;
+        border-radius: 1.25rem;
+    }
+    .destaque-dois {
+        padding: 1.25rem 1.81rem;
+        border-right: 0;
+        border-bottom: 1px solid #B2B0B0;
+        border-radius: 1.25rem;
+    }
+    .destaque-tres {
+        padding: 1.25rem 0.75rem;
+        border-bottom: 1px solid #B2B0B0;
+        border-radius: 1.25rem;
+    }
+    
+}
