--- a/assets/css/index/partials/section-destaques.css
+++ b/assets/css/index/partials/section-destaques.css
@@ -45,10 +45,11 @@ section.destaques {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0 0.94rem;
-        width: 21.4375rem;
+        padding: 0 1rem;
+        width: 100%;
         height: 19.4375rem;
-        
+        margin: 0 auto;
+        background: linear-gradient(197deg, #00126B 6.13%, #243CB4 81.59%);
     }
     .container-destaques {
         display: flex;
@@ -58,6 +59,10 @@ section.destaques {
         max-width: 767px;
         margin: 0 auto;
         text-align: center;
+
+        background-color: #fff;
+        width: 95%;
+        border-radius: 1.25rem;
     }
     
     .destaque-um h3,
@@ -75,6 +80,7 @@ section.destaques {
     
     .destaque-um {
         padding: 1.25rem 2.5rem;
+        margin: 0 0.94rem;
         border-right: 0;
         border-bottom: 1px solid #B2B0B0;
         border-radius: 1.25rem;
@@ -82,12 +88,13 @@ section.destaques {
     .destaque-dois {
         padding: 1.25rem 1.81rem;
         border-right: 0;
+        margin: 0 0.94rem;
         border-bottom: 1px solid #B2B0B0;
         border-radius: 1.25rem;
     }
     .destaque-tres {
         padding: 1.25rem 0.75rem;
-        border-bottom: 1px solid #B2B0B0;
+        margin: 0 0.94rem;
         border-radius: 1.25rem;
     }
     
