--- a/assets/css/index/partials/section-depoimentos.css
+++ b/assets/css/index/partials/section-depoimentos.css
@@ -6,8 +6,7 @@ section.depoimentos {
     width: 100%;
     padding-top: 6.88rem;
     padding-bottom: 6.88rem;
-    text-align: center;
-    background: linear-gradient(180deg, #243CB4 13.36%, #00126B 46.36%);
+    background: linear-gradient(90deg, #243CB4 1.85%, #00126B 98.91%);
 }
 
 .titulos-depoimentos h2 {
@@ -94,9 +93,12 @@ section.depoimentos .quadro h4 {
     font-weight: 600;
     margin-top: 4.69rem;
     margin-bottom: 0.5rem;
+    text-align: center;
 }
 
 section.depoimentos .quadro .estrelas {
+    display: flex;
+    margin: 0 auto;
     margin-bottom: 1.88rem;
 }
 
@@ -106,4 +108,13 @@ section.depoimentos .quadro p {
     font-style: italic;
     font-weight: 400;
     width: 15.75rem;
+
+}
+
+.linha-depoimentos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 6.88rem;
 }
