--- a/assets/css/index/partials/section-obras-concluidas.css
+++ b/assets/css/index/partials/section-obras-concluidas.css
@@ -7,7 +7,7 @@ section.obras {
     padding-top: 6.88rem;
     padding-bottom: 6.88rem;
     text-align: center;
-    background: linear-gradient(4deg, #243CB4 9.4%, #00126B 81.14%);
+    background: 3.125;
 }
 
 .titulos-obras h2 {
