--- a/assets/css/index/partials/nav.css
+++ b/assets/css/index/partials/nav.css
@@ -1,6 +1,6 @@
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     left: 50%;
     transform: translateX(-50%);
@@ -82,6 +82,7 @@ li {
     }
     
     .container-navbar {
+    max-width: 767px;
     }
     
     .menu {
