--- a/assets/css/index/partials/section-destaques.css
+++ b/assets/css/index/partials/section-destaques.css
@@ -3,12 +3,13 @@ section.destaques {
     justify-content: space-between;
     align-items: center;
     height: 7.5rem;
+    background-color: var(--cor-branco);
 }
 .container-destaques {
     display: flex;
     max-width: 1440px;
     margin: 0 auto;
-    text-align: center;
+    text-align: start;
 }
 
 .destaque-um h3,
@@ -49,7 +50,7 @@ section.destaques {
         width: 100%;
         height: 19.4375rem;
         margin: 0 auto;
-        background: linear-gradient(197deg, #00126B 6.13%, #243CB4 81.59%);
+        background: linear-gradient(184deg, #00126B 5.71%, #243CB4 88.09%);
     }
     .container-destaques {
         display: flex;
