--- a/assets/css/index/partials/section-destaques.css
+++ b/assets/css/index/partials/section-destaques.css
@@ -50,7 +50,7 @@ section.destaques {
         width: 100%;
         height: 19.4375rem;
         margin: 0 auto;
-        background: linear-gradient(184deg, #00126B 5.71%, #243CB4 88.09%);
+        background: linear-gradient(90deg, #243CB4 1.85%, #00126B 98.91%);
     }
     .container-destaques {
         display: flex;
